--- a/examples/with-express/package.json
+++ b/examples/with-express/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node src/server.js",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node src/server.js"
+    "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
     "express": "^4.17.1",
